@@ -5,6 +5,10 @@ Changes for Crate Admin Interface
 Unreleased
 ==========
 
+ - UDC: identify anonymous user with cluster id.
+   Both user id and cluster id are anonymous traits.
+   Note: You can disable UDC via the `udc.enabled` setting on the Crate server.
+
 2015/10/30 0.15.3
 =================
 
